Begin forms tidy
- Moved forms from modules to base
- Imported cab form styles
- Small fix on .callout heading colour
- Added *ignore.* to gitignore, allowing for local slap together files
such as screenshot-ignore.html for mocking up blog screenshot content

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ config.codekit
 # Annoying CSS files that shouldn't be there
 css/
 libs/css/
+
+# Lets us create local files for hacky testing and screenshots
+*ignore.*
