--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ config.codekit
 # Annoying CSS files that shouldn't be there
 css/
 libs/css/
+public/css/site.css
+
+public/css/site.css.map
+
+public/css/site.css.map
