Included missing css files for research
- Fixed gitignore to stop ignoring CSS in research folder

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,7 @@
 config.codekit
 
 # Annoying CSS files that shouldn't be there
-css/
-libs/css/
-public/css/site.css
-
-public/css/site.css.map
-
-public/css/site.css.map
+/css/
+/libs/css/
+/public/css/site.css
+/public/css/site.css.map
