--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@ config.codekit
 # Annoying CSS files that shouldn't be there
 /css/
 /libs/css/
-/public/css/site.css
+#/public/css/site.css
 /public/css/site.css.map
 .DS_Store
