--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-jade": "^1.1.0",
     "gulp-less": "^3.0.5",
     "gulp-postcss": "^6.0.1",
     "gulp-sourcemaps": "^1.6.0",
