--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "gulp-less": "^3.0.5",
     "gulp-postcss": "^6.0.1",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-util": "^3.0.7",
     "http-server": "^0.8.5",
     "pixrem": "^3.0.0",
     "postcss-color-rgba-fallback": "^2.0.0",
     "postcss-copy-assets": "^0.3.0",
-    "postcss-opacity": "^3.0.0"
+    "postcss-opacity": "^3.0.0",
+    "pretty-hrtime": "^1.0.1"
   }
 }
