--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-gh-pages": "^0.5.4",
     "gulp-jade": "^1.1.0",
     "gulp-less": "^3.0.5",
+    "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.0.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
