--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^6.3.6",
-    "browser-sync": "^2.13.0",
+    "browser-sync": "^2.17.5",
     "cssnano": "^3.3.2",
     "del": "^2.2.0",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-jade": "^1.1.0",
     "gulp-less": "^3.0.5",
@@ -22,6 +22,7 @@
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.0.1",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
     "http-server": "^0.8.5",
     "pixrem": "^3.0.0",
@@ -29,5 +30,10 @@
     "postcss-copy-assets": "^0.3.0",
     "postcss-opacity": "^3.0.0",
     "pretty-hrtime": "^1.0.1"
+  },
+  "dependencies": {
+    "concat-files": "^0.1.0",
+    "gulp-notify": "^2.2.0",
+    "postcss-copy": "^5.3.0"
   }
 }
