--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "concat-files": "^0.1.0",
+    "glob": "^7.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
