--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
     "http-server": "^0.8.5",
+    "less-plugin-glob": "^1.1.1",
     "pixrem": "^3.0.0",
     "postcss-color-rgba-fallback": "^2.0.0",
     "postcss-copy-assets": "^0.3.0",
