--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.0.1",
     "gulp-jade": "^1.1.0",
     "gulp-less": "^3.0.5",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.0.1",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-sourcemaps": "^1.9.1",
     "gulp-util": "^3.0.7",
     "http-server": "^0.8.5",
     "less-plugin-glob": "^1.1.1",
