change: Updating samples to match new gulp processes

--- a/samples/package.json
+++ b/samples/package.json
@@ -5,18 +5,29 @@
     "url": ""
   },
   "devDependencies": {
-    "cab-ui": "https://github.com/citizensadvice/cab-ui.git#v2.1.4",
-    "cssnano": "^3.7.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-if": "^2.0.1",
-    "gulp-less": "^3.1.0",
+    "cab-ui": "https://github.com/citizensadvice/cab-ui.git#v3.0.0",
+    "autoprefixer": "^6.3.6",
+    "browser-sync": "^2.13.0",
+    "cssnano": "^3.3.2",
+    "del": "^2.2.0",
+    "gulp": "^3.9.0",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.0.1",
+    "gulp-jade": "^1.1.0",
+    "gulp-less": "^3.0.5",
+    "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.1.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "pixrem": "^3.0.1",
-    "postcss-color-rgba-fallback": "^2.2.0",
-    "postcss-opacity": "^3.0.0"
+    "gulp-postcss": "^6.0.1",
+    "gulp-sourcemaps": "^1.9.1",
+    "gulp-util": "^3.0.7",
+    "http-server": "^0.8.5",
+    "less-plugin-glob": "^1.1.1",
+    "pixrem": "^3.0.0",
+    "postcss-color-rgba-fallback": "^2.0.0",
+    "postcss-copy-assets": "^0.3.0",
+    "postcss-opacity": "^3.0.0",
+    "pretty-hrtime": "^1.0.1"
   },
   "author": "Citizens Advice"
 }
