--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^6.3.6",
-    "browser-sync": "^2.13.0",
+    "browser-sync": "^2.18.13",
     "cssnano": "^3.3.2",
     "del": "^2.2.0",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.0.1",
@@ -23,6 +23,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.0.1",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^1.9.1",
     "gulp-util": "^3.0.7",
     "http-server": "^0.8.5",
